# ai-labour-market-sim

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
docs/: data-sources.md  dependency-graph.html  model.md
labour_sim/: __init__.py  batch.py  config.py  dataset.py  scenarios.py
labour_sim/data/: occupations.json  sectors.json  tasks.json
labour_sim/data/presets/: baseline.json  fast_takeoff.json  high_friction.json  policy_cushion.json
labour_sim/sim/: __init__.py  adoption.py  capability.py  demand.py  entry_exit.py  firms.py  invariants.py  labour_demand.py  labour_flows.py  matching.py  metrics.py  model.py  synthesis.py  wages.py  workers.py
labour_sim/viz/: __init__.py  agent_space.py  dashboard.py  diagnostics.py  research_page.py
legacy/: index.html  model.js  styles.css
paper/: dependency_data.py  make_figures.py  paper.tex  references.bib  take_screenshots.py
paper/figures/: _calibration.json  _fast_run.csv  _policy.json  _seniority.json
tests/: test_adoption.py  test_ai_integration.py  test_baseline_calibration.py  test_batch.py  test_capability.py  test_config.py  test_dataset.py  test_labour_flows.py  test_matching.py  test_model_substrate.py  test_scaffold.py  test_seniority.py  test_synthesis.py
