[project]
name = "ai-labour-market-sim"
version = "2.0.0"
description = "Agent-based simulator of AI adoption dynamics at the organizational and labour-market level"
requires-python = ">=3.12"
dependencies = [
    "mesa[viz]>=3.1",
    "solara>=1.44",
    "numpy>=2.0",
    "pandas>=2.2",
    "pydantic>=2.9",
    "altair>=5.4",
    "matplotlib>=3.9",
    "networkx>=3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["labour_sim"]
omit = ["labour_sim/viz/*", "app.py"]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["labour_sim"]
